Sample/Ldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  namespace: company
  labels:
    app: openldap
spec:
  selector:
    matchLabels:
      app: openldap
  replicas: 1
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
        - name: openldap
          image: osixia/openldap:1.5.0
          imagePullPolicy: "Always"
          volumeMounts:
            - name: db
              mountPath: /var/lib/ldap
            - name: config
              mountPath: /etc/ldap/slapd
            - name: certs
              mountPath: /container/service/slapd/assets/certs/
          ports:
            - name: tcp-ldap
              containerPort: 389
      volumes:
        - name: db
          hostPath:
            path: /opt/company/ldap/db
        - name: config
          hostPath:
            path: /opt/company/ldap/config
        - name: certs
          hostPath:
            path: /opt/company/ldap/certs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap-admin
  namespace: company
  labels:
    app: openldap-admin
spec:
  selector:
    matchLabels:
      app: openldap-admin
  replicas: 1
  template:
    metadata:
      labels:
        app: openldap-admin
    spec:
      containers:
        - name: phpldapadmin
          image: osixia/phpldapadmin:latest
          imagePullPolicy: "Always"
          ports:
            - name: tcp-ldapadmin
              containerPort: 80
