Sample/Ldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldap-ingress
  namespace: company
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: ldap.uetunited.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openldap
            port:
              number: 389
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldap-admin-ingress
  namespace: company
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: ldap-admin.uetunited.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openldap
            port:
              number: 80
